# fire360

./: .gitignore  README.md  bb_architectures.py  cancer.ipynb  ctgan.ipynb  debug.ipynb  decision_tree.ipynb  decision_tree.py  diabetes.ipynb  mypy.ini  pima.ipynb  pyproject.toml  pyproject.toml.old  synthetic_data.py  test.ipynb  train_bb.py  utils.py
.github/workflows/: ruff.yml
src/: test_rnn.ipynb
src/UI/xai-dashboard/: index.html
src/examples/: fire360_example.ipynb
src/examples/example_bb/: dutch_BB.pth
src/examples/example_dataset/: dutch_census.arff
src/experiments/comparison/adult/: evaluate_lime.sh  evaluate_lore.sh  evaluate_lore_genetic.sh  evaluate_shap.sh  lime.sh  lore.sh  lore_genetic.sh  shap.sh
src/experiments/comparison/covertype/: evaluate_lime.sh  evaluate_lore.sh  evaluate_lore_genetic.sh  evaluate_shap.sh  lime.sh  lore.sh  lore_genetic.sh  shap.sh
src/experiments/comparison/dutch/: evaluate_lime.sh  evaluate_lore.sh  evaluate_lore_genetic.sh  evaluate_shap.sh  lime.sh  lore.sh  lore_genetic.sh  shap.sh
src/experiments/evaluate_explanations/: evaluate_all.sh
src/experiments/train_bb/: run.sh
src/fire360/: __init__.py  utils.py
src/fire360/bb_training/: train_bb.py
src/fire360/comparison/: compute_explanations copy.py  compute_explanations.py  explainer.py  explainers.ipynb  utils_comparison.py
src/fire360/dataset_generation/: generate_synthetic_data.py
src/fire360/explanations/: compute_explanations.py  decision_tree.py  evaluate_explanations.py  explainer_model.py  explanation_utils.py  logistic_regression.py
src/lore_sa/: lore.py  readme.md
src/lore_sa/neighgen/: neighborhood_generator.py
src/rec_sys/: data_preparation.py  dataset_analysis.ipynb  personas.py  personas_1.py  rec_sys.py
src/rec_sys/experiments/: run_experiment.sh  run_test_lstm_padding.sh  run_test_lstm_padding_covertype.sh  test_lstm_padding.yaml  test_lstm_padding_adult.yaml  test_lstm_padding_covertype.yaml  test_lstm_padding_house16.yaml  test_lstm_padding_letter.yaml  test_lstm_padding_shuttle.yaml
src/results/: download_data.py  results.ipynb
src/synth_xai/: synthetic_data.py  train_bb.py  utils.py
src/synth_xai/bb_training/: train_bb.py
src/synth_xai/comparison/: compute_explanations.py  explainer.py  explainers.ipynb  utils_comparison.py
src/synth_xai/dataset_generation/: generate_synthetic_data.py
src/synth_xai/explanations/: compute_explanations.py  decision_tree.py  evaluate_explanations.py  explainer_model.py  explanation_utils.py  knn.py  logistic_regression.py  svm.py
src/test/: __init__.py  decision_tree_test.py  logistic_regression_test.py  test_history_rec_sys.py  test_persona_prediction.py  top_k_selection_test.py
train_bb/: run.sh  run_all.sh
train_bb/adult/: adult_model.yaml  run.sh  run_sweep.sh
train_bb/breast_cancer/: breast_cancer_model.yaml  run.sh  run_sweep.sh
train_bb/covertype/: covertype_model.yaml
train_bb/diabetes/: diabetes_model.yaml  run.sh  run_sweep.sh
train_bb/dutch/: dutch_model.yaml  run.sh  run_sweep.sh
train_bb/house16/: run_sweep.sh
train_bb/pima/: pima_model.yaml  run.sh  run_sweep.sh
train_bb/shuttle/: run_sweep.sh
train_synth/adult/: generate_ctgan.sh  generate_tvae.sh
train_synth/covertype/: generate_tvae.sh
train_synth/house16/: generate_ctgan.sh
train_synth/letter/: generate_tvae.sh
train_synth/shuttle/: generate_tvae.sh
(+103 files in other folders)
