[tool.poetry]
name = "personalized-explanations"
version = "0.1.0"
description = ""
authors = ["lucacorbucci <corbuccilu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
torch = "^2.5.1"
ctgan = "^0.10.2"
scikit-learn = "^1.5.2"
imodels = "^2.0.0"
dill = "^0.3.9"
wandb = "^0.18.5"
imbalanced-learn = "^0.12.4"
nvitop = "^1.3.2"
ruff = "^0.7.3"
mypy = "^1.13.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191", # indentation contains tabs
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]


[tool.ruff.isort]
case-sensitive = true
combine-as-imports = true

[tool.ruff.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

