[project]
name = "fire360"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lucacorbucci", email = "corbuccilu@gmail.com" }
]
requires-python = ">=3.10, <3.13"
dependencies = [
    "torch==2.2.2",
    "ctgan<1.0.0,>=0.10.2",
    "scikit-learn<2.0.0,>=1.5.2",
    "imodels<3.0.0,>=2.0.0",
    "dill==0.3.8",
    "wandb<1.0.0,>=0.18.5",
    "imbalanced-learn<1.0.0,>=0.12.4",
    "nvitop>=1.3.2,<2.0.0",
    "ruff<1.0.0,>=0.7.3",
    "mypy>=1.13.0,<2.0.0",
    "loguru<1.0.0,>=0.7.2",
    "sdv<2.0.0,>=1.17.2",
    "synthcity==0.2.11",
    "pytest>=8.3.4",
    "datasets>=3.2.0",
    "multiprocess>=0.70.16",
    "aix360>=0.3.0",
    "lime>=0.2.0.1",
    "anchor-exp>=0.0.2.0",
    "deap>=1.4.2",
    "category-encoders>=2.8.0",
    "bitarray>=3.1.0",
    "memray>=1.16.0",
    "seaborn>=0.13.2",
    "ty>=0.0.1a8",
]

[project.scripts]
fire360 = "fire360:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.uv.sources]
my_base_project = { path = "./src/" }

[tool.uv.workspace]
members = ["fire360"]


[tool.ruff]
line-length = 120
select = [
    "ALL", # include all the rules, including new ones
]

ignore = [
    #### modules
    "ANN", # flake8-annotations
    "COM", # flake8-commas
    "C90", # mccabe complexity
    "DJ",  # django
    "EXE", # flake8-executable
    "T10", # debugger
    "TID", # flake8-tidy-imports
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191", # indentation contains tabs
    #### specific rules
    "D100",   # ignore missing docs
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D205",
    "D212",
    "D400",
    "D401",
    "D415",
    "E402",   # false positives for local imports
    "E501",   # line too long
    "TRY003", # external messages in exceptions are too verbose
    "TD002",
    "TD003",
    "FIX002", # too verbose descriptions of todos
]
